istio/services-gateway-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: services-gateway-istio
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*.istio.kind.org"
