istio/kiali-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "kiali.istio.kind.org"
  gateways:
  - services-gateway-istio
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
