istio/minimal-virtualservice-cluster2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minimal-virtualservice
spec:
  hosts:
  - "minimal.svc.kind.cluster2"
  gateways:
  - services-gateway
  http:
  - route:
    - destination:
        host: minimal-service
        port:
          number: 9090
