istio/minimal-virtualservice-split.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minimal-virtualservice
spec:
  hosts:
  - "minimal.svc.kind.org"
  gateways:
  - services-gateway
  http:
  - route:
    - destination:
        port:
          number: 9090
        host: minimal-service
        subset: v1
      weight: 50
    - destination:
        port:
          number: 9090
        host: minimal-service
        subset: v2
      weight: 50
