istio/minimal-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minimal-virtualservice
spec:
  hosts:
  - "minimal-service.kind.org"
  gateways:
  - services-gateway
  http:
  - route:
    - destination:
        host: minimal-service
        port:
          number: 9090
