istio/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-minimal
spec:
  hosts:
  - minimal.external.kind.org
  exportTo:
  - "."
  location: MESH_EXTERNAL
  ports:
  - number: 9090
    name: http
    protocol: HTTP
  resolution: DNS
  # STATIC
  # endpoints:
  # - address: 172.17.0.6
